# FastAPI-Example-Base-App

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  errors_handlers.py  main.py
app/alembic/versions/: 2025_08_26_1723-80c81c41a17d_create_table_users.py  2025_08_26_1731-551e09ba254a_create_table_users.py  2025_08_28_1406-61f26023eb99_create_table_users.py
app/api/api_v1/: __init__.py  dependencies_examples.py  users.py
app/api/api_v1/dependencies/: cls_deps.py  func_dep.py
app/core/: config.py
app/core/models/: base.py  db_helper.py  user.py
app/core/schemas/: users.py
app/crud/: base.py  users.py
app/utils/: helpers.py
